# observer-geometry

./: .gitignore  CITATIONS.md  LICENSE  README.md  VERSION.txt  citations.cff  pyproject.toml
evidence/: README.md  pyproject.toml
evidence/docs/: AUDIT_LAYER.md  CURATED_INGESTION.md  DOMAIN.md  EPISTEMIC_STATUS.md  HOW_TO_ENCODE_MESSY_SCIENTIFIC_MATERIAL_WITHOUT_LYING_TO_YOURSELF.md  PROBLEM_ASSEMBLY.md
evidence/micro_real_bundles/: README.md  __init__.py  common.py
evidence/micro_real_bundles/bell_counts_bundle/: LICENSE.md  PROVENANCE.md  README.md  __init__.py  audit.json  bundle.json  bundle_raw.json  problem_spec.json  problem_spec_raw.json  run_main.py  summary.json  validate.py
evidence/micro_real_bundles/iris_protocol_mismatch/: LICENSE.md  PROVENANCE.md  README.md  __init__.py  audit.json  bundle.json  problem_spec.json  run_main.py  summary.json  validate.py
evidence/micro_real_bundles/leaderboard_benchmark_slice/: LICENSE.md  PROVENANCE.md  README.md  __init__.py  audit.json  bundle.json  problem_spec.json  run_main.py  summary.json  validate.py
evidence/src/evidence/: __init__.py  _utils.py  assembler.py  audit.py  encoding.py  exceptions.py  ingest.py  results.py  specs.py  suggest.py
evidence/tests/: conftest.py  test_assembly.py  test_ingest.py  test_micro_real_bundles.py  test_specs.py  test_suggest.py  test_worked_examples.py
evidence/worked_examples/: README.md  __init__.py
evidence/worked_examples/bell_evidence_encoding/: README.md  __init__.py  run_main.py
evidence/worked_examples/benchmark_blindness_encoding/: README.md  __init__.py  run_main.py
evidence/worked_examples/common/: __init__.py  simple_svg.py
evidence/worked_examples/replication_protocol_encoding/: README.md  __init__.py  (+1 more)
nomodescent/: README.md  pyproject.toml
nomodescent/docs/: AUDIT_LAYER.md  DOMAIN.md  EXTERNAL_COMPARISON_GUIDE.md  HOW_TO_USE_THIS_ON_VAGUE_SCIENTIFIC_MATERIAL_WITHOUT_LYING_TO_YOURSELF.md  PROBLEM_CONTRACT.md  QD_CERTIFICATES.md  QD_CORE_SCOPE.md  RELEASE_NOTE.md
nomodescent/external_comparisons/: README.md  __init__.py  common.py
nomodescent/tests/: test_engine.py  test_external_comparisons.py  test_qd_core.py  test_qd_hostile.py  test_search.py  test_specs.py
nomodescent/worked_examples/: README.md  __init__.py
(+569 files in other folders)
