[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomogeo"
version = "0.30.0"
description = "Exact, lightweight geometry kernel for visible precision and hidden-load calculus."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{name = "J. R. Dunkley"}]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.15",
]
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
cache_dir = ".pytest_tmp"
