[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomodescent"
version = "0.2.0"
description = "Exact descent and audit workbench on top of the frozen nomogeo kernel."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "J. R. Dunkley"}]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.15",
  "nomogeo>=0.25.0"
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
cache_dir = ".pytest_tmp"
